// ============ SILVER LAYER: cleaned, structured detail data ============
// Single source of truth. All downstream Gold-layer data marts (trend, salary, etc.)
// are derived from this layer and maintained in separate files.

Table silver.Company {
  company_id uuid [pk, default: `gen_random_uuid()`]
  name varchar [unique]
  website_url varchar
  career_page_url varchar
  company_type varchar // e.g. AV_Startup / OEM / Tier1_Supplier / Tech_Giant - supports future "company type" extension
  data_source_status varchar // "confirmed" / "unverified" / "excluded" - e.g. flags cases like Bosch "?" or Huawei "??"
}

Table silver.CompanyLocation {
  location_id uuid [pk, default: `gen_random_uuid()`]
  company_id uuid [ref: > silver.Company.company_id]
  country varchar
  is_hq boolean
}

Table silver.JobPosting {
  job_id uuid [pk, default: `gen_random_uuid()`]
  company_id uuid [ref: > silver.Company.company_id]
  title varchar [not null]
  department varchar [note: 'nullable - not all sites provide this']
  employment_type varchar [note: 'e.g. full-time/contract; full-time when the source does not state one (defaulted in the Silver model)']
  seniority_level varchar [note: 'nullable - future extension, e.g. Junior/Mid/Senior/Lead']
  salary_min float [note: 'nullable - lower bound of a salary published for this job (API field or extracted from the description); > 0']
  salary_max float [note: 'nullable - upper bound of the published range; >= salary_min']
  salary_average float [note: 'nullable - levels.fyi company-wide estimate only, not per job title; null when a range is published; never derived from a range; > 0']
  salary_currency varchar [note: 'nullable - currency code as published (e.g. USD, EUR, GBP); no conversion']
  salary_period varchar [note: 'nullable - yearly / monthly / weekly / daily / hourly; set whenever a salary is imported']
  salary_source varchar [note: 'nullable - api / regex / levels_fyi_average']
  raw_description text [not null, note: 'always required - fallback for LLM extraction when structured fields are missing']
  posted_date date [note: 'nullable - some sites do not display posting date']
  scraped_date date [not null, note: 'updated on each re-scrape via upsert - simple overwrite, no history tracking needed here']
  source_url varchar [note: 'nullable; not the deduplication key']
  source_key text [unique, note: 'namespaced Silver deduplication key used by backend sync']
  source_job_id text
  bronze_id text
  source_platform varchar [note: 'e.g. Greenhouse / Lever / Workday / custom site - helps track structure origin']
  extraction_confidence float [note: 'optional - flags how much of the structured data was LLM-inferred vs directly scraped']
}

Table silver.Location {
  location_id uuid [pk]
  name text [not null]
  normalized_name text [not null, unique]
}

Table silver.JobLocation {
  job_id uuid [ref: > silver.JobPosting.job_id]
  location_id uuid [ref: > silver.Location.location_id]
  indexes {
    (job_id, location_id) [pk]
  }
}

Table silver.Category {
  category_id uuid [pk, default: `gen_random_uuid()`]
  main_type varchar [note: 'derived from a static sub_type -> main_type taxonomy mapping (app/config/category_main_types.yaml), never set per job - one Category row per (taxonomy_version, sub_type)']
  sub_type varchar [not null, note: 'cleaned producer functional_area label']
  normalized_name text [not null, note: 'NFKC, collapsed whitespace, casefold']
  taxonomy_version int [not null, note: 'positive integer; import defaults to version 1']
  indexes {
    (taxonomy_version, normalized_name) [unique]
  }
}

Table silver.JobCategory {
  job_id uuid [ref: > silver.JobPosting.job_id]
  category_id uuid [ref: > silver.Category.category_id]
  confidence_score float [note: 'future extension; not currently stored by backend category import']

  indexes {
    (job_id, category_id) [pk]
  }

  Note: 'A job links to one or more Category rows, but they must all share the same main_type - the scraper enforces exactly one dominant technical area per job (constrain_to_dominant_main_type), so a job can carry multiple sub_types (e.g. Sensing + Perception, both under main_type "Perception & Sensing") but never sub_types spanning two different main_types (e.g. Sensing + Control). main_type is deliberately never spelled the same as one of its own sub_types (e.g. "Perception & Sensing", not "Perception") to avoid a sub_type reading as a duplicate of its own group.'
}

Enum skill_type_enum {
  tool
  programming_language
  framework
  domain_concept
  certification
}

Table silver.Skill {
  skill_id uuid [pk, default: `gen_random_uuid()`]
  skill_name varchar
  normalized_name text [not null]
  skill_type skill_type_enum
  indexes {
    (normalized_name, skill_type) [unique]
  }
}

Table silver.JobSkill {
  job_id uuid [ref: > silver.JobPosting.job_id]
  skill_id uuid [ref: > silver.Skill.skill_id]

  indexes {
    (job_id, skill_id) [pk]
  }
}

Table silver.ScrapeLog {
  scrape_id uuid [pk, default: `gen_random_uuid()`]
  company_id uuid [ref: > silver.Company.company_id]
  scrape_date date
  jobs_found int
  status varchar // success / failed
  error_message text [note: 'nullable - captures failure reason for debugging']
}
